cmake_minimum_required(VERSION 3.19)
project(abacus)
set(CMAKE_CXX_STANDARD 11)
#if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
#    add_compile_definitions(DEBUG)
#endif()
add_executable(abacus addition.cpp subtraction.cpp base.h addition.h base.cpp subtraction.h main.cpp radication.cpp radication.h multiplication.cpp multiplication.h division.cpp division.h)